Changed to static class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,23 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(returnsCorrectDelay_int tst_returnscorrectdelay_int.cpp DelaySort.cpp DelaySort.h)
+add_executable(delaysortUnitTest
+    main.cpp
+    tst_specialcases.h
+    tst_specialcases.cpp
+    tst_returnscorrectdelay_char.h
+    tst_returnscorrectdelay_char.cpp
+    tst_returnscorrectdelay_int.h
+    tst_returnscorrectdelay_int.cpp
+    receiverobject.h
+    receiverobject.cpp
+    DelaySort.h
+    DelaySort.cpp
+)
+add_test(NAME specialcases COMMAND specialcases)
 add_test(NAME returnsCorrectDelay_int COMMAND returnsCorrectDelay_int)
+add_test(NAME returnscorrectdelay_char COMMAND returnscorrectdelay_char)
 
-target_include_directories(returnsCorrectDelay_int PUBLIC CMAKE_SOURCE_DIR)
-target_link_libraries(returnsCorrectDelay_int PRIVATE Qt${QT_VERSION_MAJOR}::Test)
+target_include_directories(delaysortUnitTest PUBLIC CMAKE_SOURCE_DIR)
+target_link_libraries(delaysortUnitTest PRIVATE Qt${QT_VERSION_MAJOR}::Test)
 
